@@ -26,14 +26,17 @@ import java.util.Set;
 
 public class SkillBlacksmithing extends Skill implements ISkillBlacksmithing {
 
+  private static final String GLAZED_TERRACOTA_NAME = "tile.glazedterracotta";
+
   private static final Map<String, Integer> XP_MAP = ImmutableMap.<String, Integer>builder()
-      .put("tile.stone", 50)
-      .put("tile.stonebricksmooth", 50)
-      .put("item.netherbrick", 60)
-      .put("tile.glass", 50)
-      .put("item.brick", 100)
-      .put("tile.clayhardened", 400)
-      .put("item.ingotiron", 500)
+      .put("tile.stone", 100)
+      .put("tile.stonebricksmooth", 100)
+      .put("item.netherbrick", 110)
+      .put("tile.glass", 100)
+      .put("item.brick", 200)
+      .put("tile.clayhardened", 500)
+      .put(GLAZED_TERRACOTA_NAME, 400)
+      .put("item.ingotiron", 700)
       .put("item.ingotgold", 2000)
       .build();
 
@@ -84,11 +87,12 @@ public class SkillBlacksmithing extends Skill implements ISkillBlacksmithing {
   }
 
   private static String getBlacksmithingName(ItemStack stack) {
-    return Utils.snakeCase(stack.getItem().getUnlocalizedName());
+    String name = Utils.snakeCase(stack.getItem().getUnlocalizedName());
+    return (name.startsWith(GLAZED_TERRACOTA_NAME)) ? GLAZED_TERRACOTA_NAME : name;
   }
 
   private static boolean validBlacksmithingTarget(ItemStack stack) {
-    return XP_MAP.containsKey(Utils.snakeCase(stack.getItem().getUnlocalizedName()));
+    return XP_MAP.containsKey(getBlacksmithingName(stack));
   }
 
   public static int getXp(String blockName) {
@@ -105,6 +109,7 @@ public class SkillBlacksmithing extends Skill implements ISkillBlacksmithing {
 
   public static void giveMoreIngots(ItemSmeltedEvent event) {
     if (event.player == null || !Skills.hasSkill(event.player, Skills.BLACKSMITHING)) return;
+
     SkillBlacksmithing blacksmithing = Skills.getSkill(event.player, Skills.BLACKSMITHING, SkillBlacksmithing.class);
     if (!validBlacksmithingTarget(event.smelting)) return;
 
